Complete end-to-end time series forecasting and portfolio optimization project with robust EDA, feature engineering, model tuning, risk analysis, portfolio optimization, and backtesting. Added advanced visualizations, rolling window backtest, transaction cost modeling, error handling, and improved ReadMe.

--- a/notebooks/task1_analysis.ipynb
+++ b/notebooks/task1_analysis.ipynb
@@ -489,6 +489,24 @@
         "\n",
         "print(\"\\nOpen these HTML files in any web browser to explore the interactive dashboards!\")"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Add interactive plots"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import plotly.express as px\n",
+        "fig = px.line(tsla_processed, y='Close', title='TSLA Close Price (Interactive)')\n",
+        "fig.show()"
+      ]
     }
   ],
   "metadata": {
