--- a/notebooks/task2and3_forecasting.ipynb
+++ b/notebooks/task2and3_forecasting.ipynb
@@ -90,6 +90,62 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exploratory Data Analysis (EDA)\n",
+    " Visualize missing values, outliers, and basic statistics for TSLA.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import seaborn as sns\n",
+    "\n",
+    "# Visualize missing values\n",
+    "plt.figure(figsize=(10, 1))\n",
+    "sns.heatmap(tsla_processed.isnull().T, cbar=False)\n",
+    "plt.title(\"Missing Values in TSLA Processed Data\")\n",
+    "plt.show()\n",
+    "\n",
+    "# Summary statistics\n",
+    "display(tsla_processed.describe())\n",
+    "\n",
+    "# Outlier detection (boxplot)\n",
+    "plt.figure(figsize=(8, 4))\n",
+    "sns.boxplot(x=tsla_processed['Close'])\n",
+    "plt.title(\"TSLA Close Price Outlier Detection\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Feature Engineering: Technical Indicators\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def add_technical_indicators(df):\n",
+    "    df = df.copy()\n",
+    "    df['MA20'] = df['Close'].rolling(window=20).mean()\n",
+    "    df['MA50'] = df['Close'].rolling(window=50).mean()\n",
+    "    df['RSI'] = 100 - (100 / (1 + df['Close'].pct_change().add(1).rolling(window=14).apply(lambda x: (x[x > 0].sum() / abs(x[x < 0].sum())) if abs(x[x < 0].sum()) > 0 else 0)))\n",
+    "    return df\n",
+    "\n",
+    "tsla_processed = add_technical_indicators(tsla_processed)\n",
+    "display(tsla_processed.tail())"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -191,6 +247,68 @@
     "        \n",
     "except Exception as e:\n",
     "    print(f\"✗ SARIMA failed: {str(e)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ARIMA Model with Grid Search"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import itertools\n",
+    "import statsmodels.api as sm\n",
+    "\n",
+    "p = d = q = range(0, 2)\n",
+    "pdq = list(itertools.product(p, d, q))\n",
+    "best_aic = float('inf')\n",
+    "best_order = None\n",
+    "for order in pdq:\n",
+    "    try:\n",
+    "        model = sm.tsa.ARIMA(train_data, order=order)\n",
+    "        results = model.fit()\n",
+    "        if results.aic < best_aic:\n",
+    "            best_aic = results.aic\n",
+    "            best_order = order\n",
+    "    except:\n",
+    "        continue\n",
+    "\n",
+    "print(f\"Best ARIMA order: {best_order} (AIC={best_aic:.2f})\")\n",
+    "arima_model = sm.tsa.ARIMA(train_data, order=best_order).fit()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Walk-Forward Validation for ARIMA\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import mean_squared_error\n",
+    "\n",
+    "history = list(train_data.values)\n",
+    "predictions = []\n",
+    "for t in range(len(test_data)):\n",
+    "    model = sm.tsa.ARIMA(history, order=best_order)\n",
+    "    model_fit = model.fit()\n",
+    "    yhat = model_fit.forecast()[0]\n",
+    "    predictions.append(yhat)\n",
+    "    history.append(test_data.values[t])\n",
+    "\n",
+    "rmse = np.sqrt(mean_squared_error(test_data, predictions))\n",
+    "print(f\"Walk-forward RMSE: {rmse:.4f}\")"
    ]
   },
   {
@@ -303,6 +421,45 @@
     "print(\"✓ LSTM model successful\")\n",
     "print(f\"  RMSE: {rmse:.4f}\")\n",
     "print(f\"  MAPE: {mape:.2f}%\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Improved LSTM Model with Hyperparameter Tuning\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tensorflow.keras.wrappers.scikit_learn import KerasRegressor\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "\n",
+    "def build_lstm(units=50, dropout=0.2):\n",
+    "    model = Sequential([\n",
+    "        LSTM(units, return_sequences=True, input_shape=(seq_length, 1)),\n",
+    "        Dropout(dropout),\n",
+    "        LSTM(units),\n",
+    "        Dropout(dropout),\n",
+    "        Dense(1)\n",
+    "    ])\n",
+    "    model.compile(optimizer='adam', loss='mse')\n",
+    "    return model\n",
+    "\n",
+    "lstm_reg = KerasRegressor(build_fn=build_lstm, epochs=30, batch_size=32, verbose=0)\n",
+    "param_grid = {'units': [32, 50], 'dropout': [0.2, 0.3]}\n",
+    "grid = GridSearchCV(lstm_reg, param_grid, cv=2)\n",
+    "grid.fit(X_train, y_train)\n",
+    "print(\"Best LSTM params:\", grid.best_params_)\n",
+    "\n",
+    "# Use best params for final model\n",
+    "best_lstm = build_lstm(**grid.best_params_)\n",
+    "early_stop = EarlyStopping(monitor='val_loss', patience=10, restore_best_weights=True)\n",
+    "best_lstm.fit(X_train, y_train, epochs=50, batch_size=32, validation_split=0.1, callbacks=[early_stop], verbose=0)"
    ]
   },
   {
@@ -474,6 +631,31 @@
     "    print(f\"✓ Visualizations created\")\n",
     "else:\n",
     "    print(\"⚠️ Analysis incomplete - no successful models\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 📊 Model Selection and Results Summary\n",
+    "\n",
+    "In this notebook, we implemented and compared ARIMA, SARIMA, and LSTM models for time series forecasting of TSLA stock prices. Each model was evaluated using RMSE, MAE, MAPE, and Direction Accuracy. We generated 12-month forecasts and analyzed risk metrics such as Value at Risk (VaR), maximum drawdown, and volatility.\n",
+    "\n",
+    "**Key Findings:**\n",
+    "- The best-performing model was selected based on the lowest RMSE on the test set.\n",
+    "- All models captured the general trend, but the LSTM model was able to learn non-linear patterns and provided competitive accuracy.\n",
+    "- Risk analysis on the forecasted period highlighted potential drawdowns and volatility, which are critical for portfolio management.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 📝 Conclusion and Recommendations\n",
+    "\n",
+    "- **Model Choice:** The selected best model (see above) is recommended for short-term TSLA price forecasting, but all models should be monitored for performance drift.\n",
+    "- **Forecast Reliability:** Confidence intervals (where available) provide a measure of uncertainty. Forecasts should be interpreted as probabilistic, not deterministic.\n",
+    "- **Limitations:** Forecasts are based solely on historical price data and do not account for external factors (e.g., macroeconomic events, news).\n",
+    "- **Next Steps:** Integrate forecasts with portfolio optimization and backtesting for robust investment decision-making. Regularly retrain models with new data for continued accuracy.\n",
+    "\n",
+    "---"
    ]
   }
  ],
